plugins {
    id 'io.spring.dependency-management'
    id 'java'
}

group = 'com.crio.warmup'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '1.8'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}


apply plugin: 'application'
mainClassName = 'com.crio.warmup.stock.PortfolioManagerApplication'


repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    compile group: 'org.decampo', name: 'xirr', version: '0.1'
    compile group: 'org.springframework', name: 'spring-web', version: '5.2.2.RELEASE'
    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.10.1'
    compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.10.1'

    compile("org.springframework.boot:spring-boot-starter-log4j2:$rootProject.ext.springBootVersion") {
        exclude group: 'org.apache.logging.log4j', module: 'log4j-slf4j-impl'
        exclude group: 'org.apache.logging.log4j', module: 'log4j-core'
        exclude group: 'org.apache.logging.log4j', module: 'log4j-jul'
        exclude group: 'org.slf4j', module: 'jul-to-slf4j'
    }

    // log4j2 dependencies
    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.12.1'
    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.12.1'
    //compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '2.12.1'
    compile group: 'org.apache.logging.log4j', name: 'log4j-jul', version: '2.12.1'
    compile group: 'org.slf4j', name: 'jul-to-slf4j', version: '1.7.28'


    //other libraries apart from spring
    compile group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'

    //junits
    testCompile group: 'org.mockito', name: 'mockito-junit-jupiter', version: '3.2.4'
    testCompile 'org.junit.jupiter:junit-jupiter-api:5.6.0'
    testImplementation('org.junit.jupiter:junit-jupiter:5.6.0')
}

test {
    useJUnitPlatform()
}


publishing {
    publications {
    }
}

